# krustyfy

./: Cargo.toml  LICENSE.md  README.md  build.rs
res/: notification.ui  res.qrc  template.ui
res/themes/compact/: template.ui
src/: dbus_signal.rs  errors.rs  image_handler.rs  main.rs  notification.rs  notification_spawner.rs  notification_widget.rs  settings.rs  tray_menu.rs
