[package]
name = "test-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
zbus = {version = "3.0.0", default-features = false, features = ["tokio"]}
signals2 = "0.3.2"
byteorder = "1.4.3"
zvariant = "3.6.0"
tokio={version="1.20.1", features = ["full"]}
device_query = "1.1.1"