[package]
name = "krustyfy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
zbus = {version = "3.0.0", default-features = false, features = ["tokio"]}
signals2 = "0.3.2"
byteorder = "1.4.3"
zvariant = "3.6.0"
tokio={version="1.20.1", features = ["full"]}
device_query = "1.1.1"
linked-hash-map = "0.5.6"
base64= "0.13.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
copy_to_output = "2.0.0"
glob = "0.3.0"
